# multi-agentic-sales-representative-system

./: .dockerignore  .gitignore  Dockerfile  Makefile  Phasefourmessageprocessingandnlp.md  README.md  buildspec.yml  ci-cd-improvement-plan.md  docker-compose.prod.yml  docker-compose.yml  ebay-agentic-system.pptx  implementation_plan.md  implementation_plan_dynamic_floor_and_posture.md  multi-agent-selling-assistant.pptx  phase_5_implementation_plan.md  phase_6_implementation_plan.md  phase_7_implementation_plan.md  publisher-agent-v2-implementation-plan.md  pyproject.toml  stakeholder-presentation.pptx
.github/workflows/: ci.yml
alembic/: env.py
alembic/versions/: 0001_add_sellers_items_item_images_chat_messages_platform_credentials.py  0002_rls_policies.py  0011_phase5_autonomy_and_offer_id.py  0012_phase5_reprice_events_and_edit_flag.py  0013_phase6_prediction_logging.py  0014_phase7_billing_onboarding.py  0015_intake_visual_condition.py  0015_listing_approval_gate.py  0016_comparable_similarity_score.py  3c337d1046f0_add_sns_topic_arn_to_sellers.py  4705c798e249_add_pricing_to_items.py  4d68cffa046a_add_ebay_oauth_state_table.py  8428a72411ee_add_negotiating_posture_to_items.py  9741be610216_unique_constraint_on_conversations_.py  a1b2c3d4e5f6_add_needs_specifics_status_and_required_specifics.py  cbc1e4949ecc_add_listings_table.py  d4bdb280cde6_add_nlp_annotations_and_external_user_id.py  dd06bb949617_add_messaging_tables.py  e12cea1746b1_add_draft_fields_to_buyer_messages.py  f72fb79a80a2_add_phase4_tables_negotiations_sales_nlp.py
apps/api/: deps.py  main.py
apps/api/routers/: auth.py  billing.py  conversations.py  ebay.py  images.py  intake.py  internal.py  listings.py  pages.py  settings.py  webhooks.py
apps/web/: next.config.ts  package-lock.json  package.json  tailwind.config.ts
apps/web/app/: globals.css  layout.tsx
apps/web/app/chat/: page.tsx
apps/web/app/inbox/: page.tsx
apps/web/app/login/: page.tsx
apps/web/app/onboarding/: page.tsx
apps/web/app/settings/: page.tsx
apps/web/components/: AppShell.tsx  Toast.tsx
apps/web/components/ui/: badge.tsx  button.tsx  card.tsx  input.tsx  textarea.tsx
apps/web/lib/: api.ts
datasets/: ebay_active_listings.parquet  ebay_processed.parquet  ebay_test_set.parquet
datasets/processed/: best_xgb_params.json  feature_info.json
infrastructure/: s3-images-setup.md
notebooks/: 00_ebay_listings_scraper.ipynb  00_source_sold_listing.ipynb  01_EDA.ipynb  01_kaggle_eda.ipynb  02_preprocessing.ipynb  02_process_kaggle.ipynb  03_kaggle_train_test_split.ipynb  03_model_training.ipynb  04_hyperparam_tuning.ipynb  04_kaggle_evaluate.ipynb  full_ML_Pipeline.ipynb  output.txt
notebooks/output/: clean.parquet  lgbm_tuned_meta.json  model_ready.parquet
scripts/: get_sandbox_token.py  subscribe_webhooks.py  test_publisher.py  test_webhook.py
tests/: test_buyer_message_extraction.py  test_comms_agent.py  test_comms_agent_dispatch.py  test_conversations.py  test_ebay_notification_subscribe.py  test_ebay_signature.py  test_intake_category_inference.py  test_intake_graph.py  test_intake_vision.py  test_item_specifics.py  test_messaging_adapter.py  test_nlp_pipeline_rules.py  test_notifications.py  test_phase5_reprice_and_stats.py  test_pricing_agent.py  test_publisher.py  test_publisher_llm_specifics.py  test_publisher_specifics_recovery.py  test_sale_confirmation.py  test_settings_router.py  test_smoke.py  test_webhook_messages.py  test_webhook_signature.py  test_webhook_soap.py
tests/evals/: _helpers.py  conftest.py  sync_datasets.py  test_eval_comms.py  test_eval_intake.py  test_eval_pricing.py  test_eval_publisher.py
workers/: celery_app.py  sqs_worker.py
