[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "salesrep"
version = "0.0.1"
description = "Multi-agent AI selling assistant"
requires-python = ">=3.12"
readme = "README.md"

dependencies = [
  # Web framework
  "fastapi>=0.115",
  "uvicorn[standard]>=0.32",
  # Settings & validation
  "pydantic>=2.9",
  "pydantic-settings>=2.6",
  # Database
  "sqlalchemy[asyncio]>=2.0",
  "asyncpg>=0.30",
  "psycopg[binary]>=3.2",
  "alembic>=1.14",
  "pgvector>=0.3",
  # Task queue & message bus
  "celery[redis]>=5.4",
  "redis>=5.2",
  # Orchestration (reserved for Phase 1+)
  "langgraph>=0.2",
  # Auth
  "cryptography>=43.0",
  "PyJWT>=2.9",
  "bcrypt>=4.2",
  "email-validator>=2.2",
  # Utilities
  "httpx>=0.27",
  "structlog>=24.4",
  "python-multipart>=0.0.12",
  "boto3>=1.35",
]

[project.optional-dependencies]
ml = [
  "xgboost>=2.1",
  "scikit-learn>=1.5",
  "pandas>=2.2",
  "numpy>=2.1",
]
nlp = [
  "spacy>=3.8",
  "sentence-transformers>=3.3",
  "transformers>=4.46",
]
scraping = [
  "scrapy>=2.11",
  "playwright>=1.48",
]
dev = [
  "pytest>=8.3",
  "pytest-asyncio>=0.24",
  "pytest-cov>=6.0",
  "respx>=0.21",
  "ruff>=0.8",
  "mypy>=1.13",
]

[tool.hatch.build.targets.wheel]
packages = ["apps", "packages", "workers"]

[tool.pytest.ini_options]
testpaths = ["tests"]
asyncio_mode = "auto"
addopts = "-ra --strict-markers"

[tool.ruff]
line-length = 100
target-version = "py312"

[tool.ruff.lint]
select = ["E", "F", "W", "I", "B", "UP", "N", "SIM", "RUF"]
ignore = ["E501"]

[tool.mypy]
python_version = "3.12"
strict = true
ignore_missing_imports = true
