[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "salesrep"
version = "0.0.1"
description = "Multi-agent AI selling assistant"
requires-python = ">=3.12"
readme = "README.md"

dependencies = [
  # Web framework
  "fastapi>=0.115",
  "uvicorn[standard]>=0.32",
  # Settings & validation
  "pydantic>=2.9",
  "pydantic-settings>=2.6",
  # Database
  "sqlalchemy[asyncio]>=2.0",
  "asyncpg>=0.30",
  "psycopg[binary]>=3.2",
  "alembic>=1.14",
  "pgvector>=0.3",
  # AI
  "openai>=1.75",
  # Orchestration
  "langgraph>=0.2",
  # Tracing / observability
  "langsmith>=0.3",
  # Auth
  "cryptography>=43.0",
  "PyJWT>=2.9",
  "bcrypt>=4.2",
  "email-validator>=2.2",
  # Utilities
  "httpx>=0.27",
  "structlog>=24.4",
  "python-multipart>=0.0.12",
  "boto3>=1.35",
  "typing-extensions>=4.12",
  "langchain-openai>=1.2.1",
]

[project.optional-dependencies]
ml = [
  "xgboost>=3.2.0",
  "scikit-learn>=1.8.0",
  "lightgbm>=4.6.0",
  "optuna>=4.8.0",
  "pandas>=2.2",
  "numpy>=2.1",
]
nlp = [
  "spacy>=3.8",
  "sentence-transformers>=3.3",
  "transformers>=4.46",
  # Explicit torch dep so [tool.uv.sources] can route it to the CPU index.
  "torch>=2.2",
]
scraping = [
  "scrapy>=2.11",
  "playwright>=1.48",
]
dev = [
  "pytest>=8.3",
  "pytest-asyncio>=0.24",
  "pytest-cov>=6.0",
  "respx>=0.21",
  "ruff>=0.8",
  "mypy>=1.13",
]

[tool.hatch.build.targets.wheel]
packages = ["apps", "packages", "workers"]

[tool.pytest.ini_options]
testpaths = ["tests"]
asyncio_mode = "auto"
# Share one event loop across the whole test session. The app's async engine
# (packages.db.session.engine) is module-level and binds its asyncpg
# connections to the first event loop that touches them; per-test loops
# trigger "another operation in progress" on the second test that uses the DB.
asyncio_default_fixture_loop_scope = "session"
asyncio_default_test_loop_scope = "session"
addopts = "-ra --strict-markers"

[tool.ruff]
line-length = 100
target-version = "py312"
extend-exclude = ["notebooks/*.ipynb"]

[tool.ruff.lint]
select = ["E", "F", "W", "I", "B", "UP", "N", "SIM", "RUF"]
ignore = ["E501", "B008"]

[tool.mypy]
python_version = "3.12"
strict = true
ignore_missing_imports = true

[[tool.mypy.overrides]]
module = ["packages.platform_adapters.ebay.sell"]
warn_return_any = false

[[tool.mypy.overrides]]
module = ["packages.storage"]
disallow_untyped_defs = false
disallow_untyped_calls = false

[[tool.mypy.overrides]]
module = ["packages.agents.pricing.agent"]
disallow_untyped_defs = false
disallow_untyped_calls = false

[tool.uv]
required-environments = [
  "sys_platform == 'linux' and platform_machine == 'x86_64'",
  "sys_platform == 'darwin' and platform_machine == 'arm64'",
  "sys_platform == 'darwin' and platform_machine == 'x86_64'",
]

# Pull torch from the CPU-only wheel index on Linux. The default PyPI wheel
# pulls ~5 GB of CUDA libraries we don't use (Agent 4 / NLP run on CPU).
# macOS keeps the default wheel (Apple Silicon needs MPS, not CUDA).
[tool.uv.sources]
torch = [
  { index = "pytorch-cpu", marker = "sys_platform == 'linux'" },
]

[[tool.uv.index]]
name = "pytorch-cpu"
url = "https://download.pytorch.org/whl/cpu"
explicit = true

[dependency-groups]
dev = [
    "matplotlib>=3.10.9",
    "nbconvert>=7.17.1",
    "pyarrow>=24.0.0",
    "seaborn>=0.13.2",
]
